// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass correct values to pymControl 1`] = `
Object {
  "id": "container-id",
  "title": "StreamEmbed",
  "url": "http://localhost/embed/stream?commentID=comment-id&storyID=story-id&storyURL=story-url",
}
`;

exports[`should pass default values to pymControl 1`] = `
Object {
  "id": "container-id",
  "title": "StreamEmbed",
  "url": "http://localhost/embed/stream",
}
`;
